update twig: - navigation wrapped in a row - category view wrapped in a row - footer move hr - padding fixes

--- a/resources/scss/ceres/views/PageDesign/_breadcrumb.scss
+++ b/resources/scss/ceres/views/PageDesign/_breadcrumb.scss
@@ -16,5 +16,6 @@
 		max-width: 1200px;
 	    margin: 0 auto;
 	    background: transparent;
+	    padding: .5rem 0;
 	}
 }
